<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".Fragments.ExploreFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:emojiCompatEnabled="false" />

    <include
        android:id="@+id/include"
        layout="@layout/web_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigationbar"
        android:layout_below="@+id/header" />

    <LinearLayout
        android:id="@+id/navigationbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/backbtn"
            android:paddingTop="4dp"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/pausebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pausebtn"
            android:paddingTop="4dp"
            app:srcCompat="@drawable/pause" />

        <ImageView
            android:id="@+id/homebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/homebtn"
            android:paddingTop="4dp"
            app:srcCompat="@drawable/home_b" />

        <ImageView
            android:id="@+id/forwardbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/forwardbtn"
            android:paddingTop="4dp"
            app:srcCompat="@drawable/forward" />

    </LinearLayout>


</RelativeLayout>