<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    tools:context=".Fragments.SettingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Share_App"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/share_app"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textStyle="bold"

                    app:drawableStartCompat="@drawable/ic_share" />

                <TextView
                    android:id="@+id/Rate_App"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:text="@string/rate_app"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_star" />

                <TextView
                    android:id="@+id/More_Apps"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/More_Apps"
                    android:textColor="#000"

                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_apps" />

                <TextView
                    android:id="@+id/About_us"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_about" />

                <TextView
                    android:id="@+id/privacy_policy"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_privacy" />

                <TextView
                    android:id="@+id/Exit_App"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_exit" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>